Finished rough draft

--- a/index.html
+++ b/index.html
@@ -47,7 +47,266 @@
 					<h1>Kombucha</h1>
 				</section>
 
-				
+				<section>
+					<h2>What is Kombucha?</h2>
+					<ul>
+						<li>Fermented Sweet Tea</li>
+						<li>SCOBY</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Where did it come from?</h2>
+					<ul>
+						<li>Most likely China</li>
+						<li>Became popular in Russia</li>
+					</ul>
+				</section>
+
+				<section>
+					<h1>Supplies &amp; Ingredients</h1>
+				</section>
+
+				<section>
+					<h2>SCOBY</h2>
+				</section>
+
+				<section>
+					<h2>Where to get a SCOBY</h2>
+					<ul>
+						<li>online</li>
+						<li>in-store</li>
+						<li>grow your own</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Brewed Kombucha</h2>
+					<ul>
+						<li>Lowers pH</li>
+						<li>Innoculant</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Water</h2>
+					<ul>
+						<li>Chlorine</li>
+							<li>Used to kill microorganisms</li>
+							<li>Boiling, Filtration, or Time</li>
+						<li>Chloramines</li>
+							<li>Can't be boiled out</li>
+							<li>Filtration</li>
+							<li>Contact your water supplier</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Sugar</h2>
+					<ul>
+						<li>White Cane Sugar</li>
+						<li>Less Refined Sugars</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Camellia sinensis</h2>
+					<ul>
+						<li>Black Tea</li>
+						<li>Green Tea</li>
+						<li>Avoid Earl Grey</li>
+						<li>No Herbal Teas</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Tea Brewing</h2>
+					<ul>
+						<li>Tea Bags</li>
+						<li>Loose Leaf</li>
+							<ul>
+								<li>Metal Tea Ball</li>
+								<li>Coffee filter tea bag</li>
+							</ul>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Kombucha Covers</h2>
+					<ul>
+						<li>Fruit Flies</li>
+						<li>Dust</li>
+						<li>Cloth and String</li>
+						<li>Coffee Filters & Rubber Bands</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Jars &amp; Bottles</h2>
+					<ul>
+						<li>Fermentation</li>
+							<ul>
+								<li>Gallon jar</li>
+								<li>2 quart mason jar</li>
+							</ul>
+						<li>2nd Fermentation</li>
+							<ul>
+								<li>1/2 Gallon Jug</li>
+								<li>Mason Jar</li>
+								<li>Flip-Top Bottles</li>
+							</ul>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Other Supplies</h2>
+					<ul>
+						<li>Large spoon</li>
+						<li>Stainless Steel Bowl</li>
+						<li>Funnel</li>
+						<li>Ladle</li>
+						<li>Auto-siphone</li>
+						<li>Plastic Straw</li>
+						<li>Thermometer</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Recipe Specifics</h2>
+					<ul>
+						<li>1 gallong water</li>
+						<li>25 grams tea or 8 tea bags</li>
+						<li>225 grams sugar</li>
+						<li>1/2 cup previous batch of kombucha</li>
+						<li>SCOBY</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Direction</h2>
+					<ul>
+						<li>Make Condensed Sweet Tea</li>
+						<li>Combine Cold Water and Tea in Jar</li>
+							<ul>
+								<li>Check water temperature</li>
+								<li>Wait if still hot</li>
+							</ul>
+						<li>Add SCOBY and Cover</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Fermentation</h2>
+					<ul>
+						<li>Temperature</li>
+							<ul>
+								<li>70 to 85&deg;F</li>
+								<li>Ideal: 75&deg;F</li>
+							</ul>
+						<li>Location</li>
+							<ul>
+								<li>Out of direct sunlight</li>
+								<li>Consistent temperatures</li>
+							</ul>
+						<li>Time</li>
+							<ul>
+								<li>1 to 4 weeks</li>
+								<li>Taste everyday after first week</li>
+							</ul>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Too sweet?</h2>
+					<ul>
+						<li>Continue Fermentation</li>
+						<li>Check Daily</li>
+					</ul>
+					<p>&nbsp;</p>
+					<h2>Too Tart?</h2>
+					<ul>
+						<li>Add sugar to bottle or 2nd fermentation</li>
+						<li>Brew shorter next batch</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>2nd Fermentation</h2>
+					<ul>
+						<li>Carbonation?</li>
+						<li>48 hours to 4 days</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Flavor</h2>
+					<ul>
+						<li>Ginger</li>
+						<li>Ginger Mint</li>
+						<li>Lavender and Lemon</li>
+							<ul>
+								<li>3 lemons</li>
+								<li>1 tablespoon lavender</li>
+							</ul>
+						<li>Fresh Fruit</li>
+							<ul>
+								<li>Caution: Vigorous Carbonation</li>
+								<li>Berries</li>
+							</ul>
+						<li>Concord Grape Concentrate</li>
+							<ul>
+								<li>Without additives</li>
+							</ul>
+					</ul>
+				</section>
+
+				<section>
+					<h1>Exploding Bottles Warning</h1>
+				</section>
+
+				<section>
+					<h2>Bottling</h2>
+					<ul>
+						<li>Choose your Vessel</li>
+						<li>From Jar to Bottle</li>
+							<ul>
+								<li>funnel and pour</li>
+								<li>ladle</li>
+								<li>auto-siphon</li>
+							</ul>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Storing your SCOBY</h2>
+					<ul>
+						<li>Do not refrigerate</li>
+						<li>Brew next batch immediately</li>
+						<li>Or make a SCOBY hotel</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Grow Your Own SCOBY</h2>
+					<ul>
+						<li>Why does this work?</li>
+						<li>1 to 4 weeks</li>
+						<li>No need to add sweet tea</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Other uses for kombucha</h2>
+					<ul>
+						<li>Kombucha Vinegar</li>
+						<li>Mixed Drink</li>
+						<li>SCOBY Candy</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Drink 'buch and be merry</h2>
+				</section>
 
 			</div>
 
